==> LongDirtyAnimAlf/RotoPD/Firmware/WaveShare/RP2350_GUI/src/CAN/mcp2515.cpp <==
#include "Arduino.h"
#include "hardware/spi.h"
#include "mcp2515.h"
#define BSP_XL2515_SPI_PORT spi0
#define BSP_XL2515_SCLK_PIN 2
#define BSP_XL2515_MOSI_PIN 3
#define BSP_XL2515_MISO_PIN 4
#define BSP_XL2515_CS_PIN 5

uint8_t MCP2515::readRegister(const REGISTER reg) const
{
    uint8_t data = 0;
    startSPI();
    spi_write_blocking(BSP_XL2515_SPI_PORT, (const uint8_t[]){INSTRUCTION_READ}, 1);
    spi_write_blocking(BSP_XL2515_SPI_PORT, (const uint8_t[]){reg}, 1);
    spi_read_blocking(BSP_XL2515_SPI_PORT, 0, &data, 1);
    endSPI();
    return data;
}

void MCP2515::readRegisters(const REGISTER reg, uint8_t values[], const uint8_t n) const
{
    uint8_t buf[2];
    buf[0] = INSTRUCTION_READ;
    buf[1] = reg;
    startSPI();
    spi_write_blocking(BSP_XL2515_SPI_PORT, buf, 2);
    spi_read_blocking(BSP_XL2515_SPI_PORT, 0, values, n);
    endSPI();
}

void MCP2515::setRegister(const REGISTER reg, const uint8_t value)
{
    uint8_t buf[3];
    buf[0] = INSTRUCTION_WRITE;
    buf[1] = reg;
    buf[2] = value;
    startSPI();
    spi_write_blocking(BSP_XL2515_SPI_PORT, buf, 3);
    endSPI();
}

void MCP2515::setRegisters(const REGISTER reg, const uint8_t values[], const uint8_t n)
{
    uint8_t buf[n + 2];
    buf[0] = INSTRUCTION_WRITE;
    buf[1] = reg;
    memcpy(buf + 2, values, n);
    startSPI();
    spi_write_blocking(BSP_XL2515_SPI_PORT, buf, n + 2);
    endSPI();
}

void MCP2515::modifyRegister(const REGISTER reg, const uint8_t mask, const uint8_t data)
{
    uint8_t buf[4];
    buf[0] = INSTRUCTION_BITMOD;
    buf[1] = reg;
    buf[2] = mask;
    buf[3] = data;
    startSPI();
    spi_write_blocking(BSP_XL2515_SPI_PORT, buf, 4);
    endSPI();
}

uint8_t MCP2515::getStatus(void) const
{
    uint8_t data = 0;
    startSPI();
    spi_write_blocking(BSP_XL2515_SPI_PORT, (const uint8_t[]){INSTRUCTION_READ_STATUS}, 1);
    spi_read_blocking(BSP_XL2515_SPI_PORT, 0, &data, 1);
    endSPI();
    return data;
}

MCP2515::ERROR MCP2515::setMode(const CANCTRL_REQOP_MODE mode)
{
    modifyRegister(MCP_CANCTRL, CANCTRL_REQOP | CANCTRL_OSM, mode);

    unsigned long endTime = millis() + 10;
    bool modeMatch = false;
    while (millis() < endTime) {
        uint8_t newmode = readRegister(MCP_CANSTAT);
        newmode &= CANSTAT_OPMOD;

        // OSM bit (0x08) is not reflected in CANSTAT's OPMOD field (0xE0).
        // When ONE_SHOT is requested, the chip reports NORMAL (0x00) mode.
        // Mask non-opmode bits so the compare works for all modes.
        modeMatch = newmode == (mode & CANSTAT_OPMOD);

        if (modeMatch) {
            break;
        }
    }

    return modeMatch ? ERROR_OK : ERROR_FAIL;

}

MCP2515::ERROR MCP2515::setBitrate(const CAN_SPEED canSpeed)
{
    return setBitrate(canSpeed, MCP_16MHZ);
}

MCP2515::ERROR MCP2515::setBitrate(const CAN_SPEED canSpeed, CAN_CLOCK canClock)
{
    ERROR error = setMode(CANCTRL_REQOP_CONFIG);
    if (error != ERROR_OK) {
        return error;
    }

    const BitTimingEntry *table;
    switch (canClock) {
        case MCP_8MHZ:  table = BIT_TIMING_8MHz;  break;
        case MCP_16MHZ: table = BIT_TIMING_16MHz; break;
        case MCP_20MHZ: table = BIT_TIMING_20MHz; break;
        default: return ERROR_FAIL;
    }

    const BitTimingEntry &e = table[canSpeed];
    if (e.speed != canSpeed || (e.cfg1 == 0 && e.cfg2 == 0 && e.cfg3 == 0)) {
        return ERROR_FAIL;
    }

    setRegister(MCP_CNF1, e.cfg1);
    setRegister(MCP_CNF2, e.cfg2);
    setRegister(MCP_CNF3, e.cfg3);
    return ERROR_OK;
}

MCP2515::ERROR MCP2515::setClkOut(const CAN_CLKOUT divisor)
{
    if (divisor == CLKOUT_DISABLE) {
	/* Turn off CLKEN */
	modifyRegister(MCP_CANCTRL, CANCTRL_CLKEN, 0x00);

	/* Turn on CLKOUT for SOF */
	modifyRegister(MCP_CNF3, CNF3_SOF, CNF3_SOF);
        return ERROR_OK;
    }

    /* Set the prescaler (CLKPRE) */
    modifyRegister(MCP_CANCTRL, CANCTRL_CLKPRE, divisor);

    /* Turn on CLKEN */
    modifyRegister(MCP_CANCTRL, CANCTRL_CLKEN, CANCTRL_CLKEN);

    /* Turn off CLKOUT for SOF */
    modifyRegister(MCP_CNF3, CNF3_SOF, 0x00);
    return ERROR_OK;
}

MCP2515::ERROR MCP2515::setFilterMask(const MASK mask, const bool ext, const uint32_t ulData)
{
    ERROR res = setMode(CANCTRL_REQOP_CONFIG);
    if (res != ERROR_OK) {
        return res;
    }
    
    uint8_t tbufdata[4];
    prepareId(tbufdata, ext, ulData);

    REGISTER reg;
    switch (mask) {
        case MASK0: reg = MCP_RXM0SIDH; break;
        case MASK1: reg = MCP_RXM1SIDH; break;
        default:
            return ERROR_FAIL;
    }

    setRegisters(reg, tbufdata, 4);
    
    return ERROR_OK;
}

MCP2515::ERROR MCP2515::setFilter(const RXF num, const bool ext, const uint32_t ulData)
{
    ERROR res = setMode(CANCTRL_REQOP_CONFIG);
    if (res != ERROR_OK) {
        return res;
    }

    REGISTER reg;

    switch (num) {
        case RXF0: reg = MCP_RXF0SIDH; break;
        case RXF1: reg = MCP_RXF1SIDH; break;
        case RXF2: reg = MCP_RXF2SIDH; break;
        case RXF3: reg = MCP_RXF3SIDH; break;
        case RXF4: reg = MCP_RXF4SIDH; break;
        case RXF5: reg = MCP_RXF5SIDH; break;
        default:
            return ERROR_FAIL;
    }

    uint8_t tbufdata[4];
    prepareId(tbufdata, ext, ulData);
    setRegisters(reg, tbufdata, 4);

    return ERROR_OK;
}

MCP2515::ERROR MCP2515::sendMessage(const TXBn txbn, const struct can_frame *frame)
{
    if (frame->can_dlc > CAN_MAX_DLEN) {
        return ERROR_FAILTX;
    }

    const struct TXBn_REGS *txbuf = &TXB[txbn];

    uint8_t data[13];

    bool ext = (frame->can_id & CAN_EFF_FLAG);
    bool rtr = (frame->can_id & CAN_RTR_FLAG);
    uint32_t id = (frame->can_id & (ext ? CAN_EFF_MASK : CAN_SFF_MASK));

    prepareId(data, ext, id);

    data[MCP_DLC] = rtr ? (frame->can_dlc | RTR_MASK) : frame->can_dlc;

    memcpy(&data[MCP_DATA], frame->data, frame->can_dlc);

    setRegisters(txbuf->SIDH, data, 5 + frame->can_dlc);

    modifyRegister(txbuf->CTRL, TXB_TXREQ, TXB_TXREQ);

    uint8_t ctrl = readRegister(txbuf->CTRL);
    if ((ctrl & (TXB_ABTF | TXB_MLOA | TXB_TXERR)) != 0) {
        return ERROR_FAILTX;
    }
    return ERROR_OK;
}

MCP2515::ERROR MCP2515::sendMessage(const struct can_frame *frame)
{
    // Try to drain any pending queued messages first
    processTxQueue();

    // Try direct hardware transmission
    ERROR result = sendMessageDirect(frame);
    if (result == ERROR_OK) {
        return ERROR_OK;
    }

    // Hardware buffers full - enqueue if room
    noInterrupts();
    bool enqueued = _txQueue.push(*frame);
    interrupts();

    if (enqueued) {
        return ERROR_OK;
    }

    return ERROR_ALLTXBUSY;
}

MCP2515::ERROR MCP2515::readMessage(const RXBn rxbn, struct can_frame *frame)
{
    const struct RXBn_REGS *rxb = &RXB[rxbn];

    uint8_t tbufdata[5];

    readRegisters(rxb->SIDH, tbufdata, 5);

    uint32_t id = (tbufdata[MCP_SIDH]<<3) + (tbufdata[MCP_SIDL]>>5);

    if ( (tbufdata[MCP_SIDL] & TXB_EXIDE_MASK) ==  TXB_EXIDE_MASK ) {
        id = (id<<2) + (tbufdata[MCP_SIDL] & 0x03);
        id = (id<<8) + tbufdata[MCP_EID8];
        id = (id<<8) + tbufdata[MCP_EID0];
        id |= CAN_EFF_FLAG;
    }

    uint8_t dlc = (tbufdata[MCP_DLC] & DLC_MASK);
    if (dlc > CAN_MAX_DLEN) {
        return ERROR_FAIL;
    }

    uint8_t ctrl = readRegister(rxb->CTRL);
    if (ctrl & RXBnCTRL_RTR) {
        id |= CAN_RTR_FLAG;
    }

    frame->can_id = id;
    frame->can_dlc = dlc;

    readRegisters(rxb->DATA, frame->data, dlc);

    modifyRegister(MCP_CANINTF, rxb->CANINTF_RXnIF, 0);

    return ERROR_OK;
}

MCP2515::ERROR MCP2515::readMessage(struct can_frame *frame)
{
    // If interrupt flagged, drain HW buffers into queue
    if (_rxInterruptPending) {
        _rxInterruptPending = false;
        drainRxBuffers();
    }

    // If TX buffer freed, drain software TX queue into hardware
    if (_txInterruptPending) {
        _txInterruptPending = false;
        while (processTxQueue());
    }

    // Read from software queue first
    noInterrupts();
    bool dequeued = _rxQueue.pop(*frame);
    interrupts();

    if (dequeued) {
        return ERROR_OK;
    }

    // Queue empty - try hardware directly
    uint8_t stat = getStatus();
    if ( stat & STAT_RX0IF ) {
        return readMessage(RXB0, frame);
    } else if ( stat & STAT_RX1IF ) {
        return readMessage(RXB1, frame);
    }

    return ERROR_NOMSG;
}
